--- a/main.ipynb
+++ b/main.ipynb
@@ -14,7 +14,7 @@
     "Alejandro Uscátegui Torres <br> \n",
     "Javier Santana <br>\n",
     "David Pérez <br>\n",
-    "Santiago Botero\n",
+    "Santiago Barajas\n",
     "</center>\n",
     "<br>\n",
     "\n",
@@ -497,6 +497,11 @@
     "\n",
     "incognita_de_normalizacion = 1 / sum(lista_estados_finales)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
